checkpoint estado de la applicacion: por probarse

--- a/src/main/resources/META-INF/additional-spring-configuration-metadata.json
+++ b/src/main/resources/META-INF/additional-spring-configuration-metadata.json
@@ -4,6 +4,11 @@
 			"name": "external-api.cosumes",
 			"type": "java.lang.String",
 			"description": "A description for 'external-api.cosumes'"
+		},
+		{
+			"name": "external-api.keycloack",
+			"type": "java.lang.String",
+			"description": "A description for 'external-api.keycloack'"
 		}
 	]
 }
