--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 
 server.port=9000
 
-external-api.cosumes=http://localhost:8080
+external-api.cosumes=http://localhost:8500
+external-api.keycloack=http://localhost:8080/realms/ContactosRealm/protocol/openid-connect/token
