--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,9 @@ server.port=9000
 
 external-api.cosumes=http://localhost:8500
 external-api.keycloack=http://localhost:8080/realms/ContactosRealm/protocol/openid-connect/token
+
+logging.level.org.springframework.security=trace
+
+logging.level.org.springframework.security.web.FilterChainProxy=TRACE
+
+org.springframework.security.config.annotation.web.builders.WebSecurity.debugEnabled=true
